Fixed pictures in workshop and mentorship row from displaying on bottom edge on smaller screens

--- a/sources/css/program.css
+++ b/sources/css/program.css
@@ -173,6 +173,16 @@ label {
       }
     }
 
+@media only screen
+  and (max-width: 992px) {
+    #eligrightside {
+      background-size: 0px;
+    }
+    #benrightside {
+      background-size: 0px;
+    }
+  }
+
 @media only screen 
     and (max-width: 1855px) {
         .rightparagraph {
